--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,6 +28,8 @@
 	  <a href=/atom.xml>Feed</a>
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p>
+	&copy; {{ site.time | date: '%Y' }}. <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png"/></a>
+	</p>
   </div>
 </div>
