Add direct link to my GitHub profile in the sidebar.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,6 +25,7 @@
           {% endif %}
         {% endif %}
       {% endfor %}
+	  <a href=https://github.com/egan>GitHub</a>
 	  <a href=/atom.xml>Feed</a>
     </nav>
 
