--- a/_includes/tag_link_formatter.html
+++ b/_includes/tag_link_formatter.html
@@ -2,5 +2,5 @@
 	Format a link to a posts-with-tag page from "tag", a _data/tags.yml object, and "tag_separator".
 {% endcomment %}
 
-<a href="{{ site.baseurl }}tag/{{ include.tag.slug }}">{{ include.tag.name }}</a>{% if forloop.last == false %}{{ include.tag_separator }}{% endif %}
+<a href="/tag/{{ include.tag.slug }}">{{ include.tag.name }}</a>{% if forloop.last == false %}{{ include.tag_separator }}{% endif %}
 
