--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,7 @@ layout: default
 		{% if sameTagCount >= minCommonTags %}
 			<li>
 				<h3>
-					<a href="{{ site.baseurl }}{{ post.url }}">
+					<a href="{{ post.url }}">
 						{{ post.title }}
 						<small>{{ post.date | date_to_string }}</small>
 					</a>
